--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,37 @@
-# 🧠 Core ML
+#Core ML
 torch
 torchvision
 
-# ⚙️ Web framework
+#Web framework
 fastapi
 uvicorn
 
-# 🖼 Image processing
+#Image processing
 pillow
 
-# 🧪 Model training and evaluation
+#Model training and evaluation
 scikit-learn
 matplotlib
 tqdm
 
-# 🌐 Frontend communication
+#Frontend communication
 python-multipart
 
-# 📊 CSV/JSON handling (built-in but listed for clarity)
+#CSV/JSON handling (built-in but listed for clarity)
 pandas
 
-# 🔒 CORS middleware
+#CORS middleware
 python-dotenv
 
-# 📨 Email reminders (optional)
+#Email reminders (optional)
 smtplib
 email-validator
 
-# 📁 File operations (built-in)
+# File operations (built-in)
 # os, io, csv, datetime
 
-# 🐍 Kaggle CLI for dataset download
+# Kaggle CLI for dataset download
 kaggle
 
-# ✨ Other optional (useful for API testing & development)
+#Other optional (useful for API testing & development)
 requests
